<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameActivityLinearLayout"
    android:layout_width="310dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".history.HistoryActivity"
    android:background="@color/colorDarkGrey"
    android:layout_gravity="center">

    <ListView
        android:contentDescription="@string/historyListCD"
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:contentDescription="@string/deleteHistoryButtonCD"
        android:id="@+id/deleteHistoryButton"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@drawable/round_blue_button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/deleteHistoryButton"
        android:textSize="20sp"
        android:textColor="@color/colorWhite" />

</RelativeLayout>