<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="310dp"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    app:layout_constrainedHeight="false"
    app:layout_constrainedWidth="false"
    tools:context=".main.mainActivity"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/titleTextViewCD"
        android:fontFamily="@font/oswald"
        android:gravity="center"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/title"
        android:textColor="@color/colorWhite"
        android:textSize="70sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <Button
        android:contentDescription="@string/newGameButtonCD"
        android:id="@+id/newGameButton"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_blue_button"
        android:foreground="@drawable/ripple_effect"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/newGame"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:contentDescription="@string/historyButtonCD"
        android:id="@+id/historyButton"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_blue_button"
        android:foreground="@drawable/ripple_effect"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/historyButton"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        app:layout_constraintVertical_bias="0.050000012" />

    <ImageView
        android:id="@+id/bgFlag"
        android:layout_width="71dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/bgFlagCD"
        android:src="@drawable/bg_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyButton"
        app:layout_constraintVertical_bias="0.691" />

    <ImageView
        android:id="@+id/ukFlag"
        android:layout_width="71dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ukFlagCD"
        android:src="@drawable/uk_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyButton"
        app:layout_constraintVertical_bias="0.747" />

    <!--<ImageView-->
        <!--android:contentDescription="@string/infoButtonCD"-->
        <!--android:id="@+id/infoButton"-->
        <!--android:layout_width="36dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:src="@drawable/info_button"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.94"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.01999998" />-->

</android.support.constraint.ConstraintLayout>