<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:padding="0dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/gameLeftDialogTitle"
        android:textColor="@color/colorLightBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/gameLeftDialogMessage"
        android:textColor="@color/colorLightGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
        app:layout_constraintVertical_bias="0.110000014" />

    <Button
        android:id="@+id/dialogYesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/roboto_bold"
        android:minHeight="40dp"
        android:minWidth="50dp"
        android:text="@string/dialogYes"
        android:textColor="@color/colorLightBlue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogMessage" />

    <Button
        android:id="@+id/dialogNoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/roboto_bold"
        android:minHeight="40dp"
        android:minWidth="50dp"
        android:padding="0dp"
        android:text="@string/dialogNo"
        android:textColor="@color/colorLightBlue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogYesButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogMessage" />
</android.support.constraint.ConstraintLayout>